tests/golden/defaults/defaults/defaults/01_vcluster_helmchart/vcluster/templates/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vcluster
    chart: vcluster-0.36.1
    heritage: Helm
    release: defaults
  name: defaults-headless
  namespace: syn-defaults
spec:
  clusterIP: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
  publishNotReadyAddresses: true
  selector:
    app: vcluster
    release: defaults
