tests/golden/defaults/defaults/defaults/01_vcluster_helmchart/vcluster/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app: vcluster
    chart: vcluster-0.36.1
    heritage: Helm
    release: defaults
  name: defaults
  namespace: syn-defaults
spec:
  rules:
    - host: null
      http:
        paths:
          - backend:
              service:
                name: defaults
                port:
                  name: https
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - null
      secretName: defaults-tls
