tests/golden/defaults/defaults/defaults/01_vcluster_helmchart/vcluster/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vcluster
    chart: vcluster-0.36.1
    heritage: Helm
    release: defaults
    vcluster.loft.sh/service: 'true'
  name: defaults
  namespace: syn-defaults
spec:
  ports:
    - name: https
      nodePort: 0
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: kubelet
      nodePort: 0
      port: 10250
      protocol: TCP
      targetPort: 8443
  selector:
    app: vcluster
    release: defaults
  type: ClusterIP
